# allovisor

./: .git-blame-ignore-revs  .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  README.md  azure-pipelines.yml  build-android.sh  generate-version.sh  main.lua  publish-build.sh  publish-sidequest.sh  rename-builds.sh
lua/: conf.lua  json.lua  main.lua  menuapps_main.lua  menuserv_main.lua  profiler.lua  util.lua
lua/alloapps/: app_chooser.lua  avatar_chooser.lua  embedded_app.lua  mainmenu.lua  menu_app.lua
lua/alloapps/menu/: app.lua  audio.lua  audio_pane.lua  connect_pane.lua  graphics_pane.lua  main_menu_pane.lua  options_pane.lua  overlay_pane.lua  view.lua
lua/app/: scenemanager.lua
lua/app/menu/: main.lua  main_menu_scene.lua  menu.lua  menu_item.lua  menu_scene.lua  netmenu_scene.lua  overlay_menu_scene.lua
lua/app/menu/alloapps/: menu.lua
lua/app/network/: entity.lua  graphics_eng.lua  main.lua  network.lua  network_scene.lua  physics_eng.lua  pose_eng.lua  sound_eng.lua  threaded_client_inner.lua  threaded_client_outer.lua
lua/app/test/: controlsOverlay.lua  cube.lua
lua/assets/images/: help-desktop.bak
lua/assets/models/: arcade.glb  broken.glb  loading.glb  mask.glb
lua/assets/models/app-previews/: clock.glb  drawing-board.glb  file-viewer.glb  house.glb  jukebox.glb
lua/assets/models/avatars/animal/: head.glb  left-hand.glb  right-hand.glb  torso.glb
lua/assets/models/avatars/female/: head.glb  left-hand.glb  right-hand.glb  torso.glb
lua/assets/models/avatars/male/: head.glb  left-hand.glb  right-hand.glb  torso.glb
lua/assets/models/decorations/forest/: CC-BY-license.html  PUSHILIN_forest.glb  PUSHILIN_forest.gltf
lua/assets/models/house/: balcony_v01.glb  carpet_main_room.glb  carpet_sideroom.glb  ceilings_stucture.glb  chandelier v2.glb  cofee_table_01.glb  cofee_table_01_v05.glb  cofee_table_02_v2.glb  coffee_table.glb  coffee_table02.glb  conference_table_v3.glb  confrence_chairs.glb  confrence_chairs_table_v05.glb  confrence_table.glb  couch-chair01.glb  couch-chair02.glb  couch01.glb  couch01_v05.glb  couch01_wall.glb  couch02-sideroom.glb  couch02-sideroom_v2.glb  couch02_v05.glb  couch02_v2.glb  couch_chair_v2.glb  couch_chairs_v05.glb  couch_wall_v05.glb  couch_wall_v2.glb  divider 01.glb  divider 02.glb  divider_01_v2.glb  divider_02_v2.glb  house_shell.glb  house_shell_side wings.glb  house_shell_side wings_v02.glb  house_shell_side wings_v03.glb  house_shell_sidewings_v05.glb  house_shell_v02.glb  house_shell_v05_1.glb  lamp_v02.glb  outdoor_terrace_glass_V02.glb  (+13 more)
lua/assets/models/left-hand/: LeftHand.gltf  left-hand.blend  left-hand.glb
lua/assets/models/mask/: mask.blend  mask.blend1  mask.glb
lua/assets/models/right-hand/: RightHand.gltf  right-hand.blend  right-hand.blend1  right-hand.glb
lua/assets/models/torso/: torso.glb
lua/eng/: assets_eng.lua  graphics_eng.lua  physics_eng.lua  pose_eng.lua  renderer.lua  shader.lua  sound_eng.lua  stats_eng.lua  text_eng.lua
lua/eng/pose_eng/: buttons.lua  hand_ray.lua  init.lua  skeleton.lua
lua/eng/shader/: frag-old.glsl  frag.glsl  normals.glsl  vert.glsl
lua/engine/: ent.lua  mode.lua
lua/ent/ui2/: init.lua
lua/lib/: alloavatar.lua  allomath.lua  allostring.lua  async-loader-thread.lua  async-loader.lua  lovr-dragndrop.lua  lovr-keyboard.lua  lovr-mouse.lua  lovr-settings.lua  lovr-store-thread.lua  lovr-store.lua  lovrasset.lua  model-loader-thread.lua  model-loader.lua  random_string.lua  standard_widgets.lua  util.lua
lua/scenes/: controlsOverlay.lua  netmenu_scene.lua  network_scene.lua  scenemanager.lua  stats.lua
lua/shader/: alloBasicShader.lua  alloLoadingCubeShader.lua  alloPbrShader.lua  alloPointerRayShader.lua
lua/tests/: README.md  handtracking.lua  issue292-pico_text_rendering.lua  viewpose.lua
lua/threads/: menuapps_main.lua  menuserv_main.lua
src/: allomac.m  allonet_loader.c  desktop_main.c  get_version.c  media.c  util.h
src/android/: AndroidManifest_pico.xml  AndroidManifest_quest.xml
src/mac/: Info.plist  MacOSXBundleInfo.plist.in  alloverse.icns
